@@ -14,6 +14,8 @@ Revision 4.1.15a
   authenticated ReportPDU generation.
 - Fix to SNMPv1 PDU handling at CommandResponder & NotificationReceiver
   apps.
+- Fix to CommandResponder app to skip Counter64 SMI values when responding
+  to SNMPv1 Manager.
 
 Revision 4.1.14a
 ----------------
